# HyperPack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROGRESS_IMPROVEMENTS.md  README.md  SECURITY.md  build-wasm.sh  patch_mask.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
benchmark/: .gitignore  BENCHMARK_REPORT.md  STANDARD_CORPUS_REPORT.md  run_benchmark.sh  run_standard_benchmark.sh
benchmark/results/: Calgary_20260309_112825.csv  Calgary_20260309_114859.csv  Calgary_20260309_115753.csv  Calgary_20260309_211559.csv  Calgary_20260309_211954.csv  Calgary_20260309_212546.csv  Canterbury_20260309_112813.csv  Canterbury_20260309_114847.csv  Canterbury_20260309_115742.csv  Canterbury_20260309_211548.csv  Canterbury_20260309_211944.csv  Canterbury_20260309_212535.csv  Silesia_20260309_112839.csv  Silesia_20260309_114914.csv  Silesia_20260309_115808.csv  Silesia_20260309_211614.csv  Silesia_20260309_212009.csv  (+2 more)
docs/: ARCHITECTURE.md  BASE64_TESTS.md  BENCHMARKS.md  EXPERIMENTAL_TESTS.md  FINAL_REPORT.md  MULTIPLATFORM_APP.md  OPTIMIZATION_HISTORY.md  ROADMAP.md  TECHNICAL.md  WEB_VS_NATIVE.md
hyperpack-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
hyperpack-web/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
hyperpack-web/src-tauri/capabilities/: default.json
hyperpack-web/src-tauri/icons/: icon.icns
hyperpack-web/src-tauri/src/: lib.rs  main.rs
src/: hyperpack.c  hyperpack_lib.c  hyperpack_wasm.c
(+16 files in other folders)
